grammar.js
    source_file: $ => seq(
      repeat($.pragma_directive),
      repeat($.include_directive),
      repeat($._definition),
      optional($.main_component_definition),
    ),

    // -- [ Pragma ] --------------------------------------------------------
    // ParsePragma
    _definition: $ => choice(
      $.function_definition,
      $.template_definition,
      $.bus_definition,
    ),

    template_definition: $ => seq(
      'template',
      optional(field('modifier', $.custom)),
      optional(field('modifier', $.extern_c)),
      optional(field('modifier', $.parallel)),
      field('name', $.identifier),
      optional(field('parameters', $.parameter_list)),
      field('body', $.template_body),
    ),

    template_body: $ => seq('{', repeat($._block_item), '}'),

    function_definition: $ => seq(
      'function',
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      field('body', $.function_body),
    ),

    function_body: $ => seq('{', repeat($._block_item), '}'),

    // circom 2.2
    parameter_list: $ => seq('(', commaSep($.parameter), ')'),

    parameter: $ => field('name', $.identifier),

    // ParseMainComponent
    _block_item: $ => choice(
      $._declaration,
      $._statement,
    ),

    _declaration: $ => choice(
      $.signal_declaration_statement,
      $.variable_declaration_statement,
      $.component_declaration_statement,
    ),

    // ParseStatement0/1/2: declarations cannot be the unbraced body of an
    // if, for or while.
    _loop_body: $ => choice(
      $.for_statement,
      $.while_statement,
      $.return_statement,
      $.expression_statement,
      $.log_statement,
      $.assert_statement,
      $.block_statement,
    ),

    // ParseBlock
    block_statement: $ => seq('{', repeat($._block_item), '}'),

    for_statement: $ => seq(
      'for',
      '(',
      choice(
        field('initializer', $._declaration),
        seq(field('initializer', $._substitution), ';'),
      ),
      field('condition', $._expression),
      ';',
      field('update', $._substitution),
      ')',
      field('body', $._loop_body),
    ),

    while_statement: $ => seq(
      'while',
      '(',
      field('condition', $._expression),
      ')',
      field('body', $._loop_body),
    ),

    return_statement: $ => seq(
      'return',
      field('value', $._expression),
      ';',
    ),

    // ParseStatementLog
    expression_statement: $ => seq(
      choice(
        $.assignment_expression,
        $.increment_expression,
        $.decrement_expression,
        $._anonymous_component_statement,
      ),
      ';',
    ),

    _anonymous_component_statement: $ => choice(
      alias($._anonymous_component_call, $.call_expression),
      alias($._parenthesized_anonymous_component, $.parenthesized_expression),
    ),

    _substitution: $ => choice(
      alias($._substitution_assignment, $.assignment_expression),
      $.increment_expression,
      $.decrement_expression,
    ),

    assignment_expression: $ => choice(
      $._substitution_assignment,
      seq(
        field('left', $._expression),
        field('operator', '==='),
        field('right', $._expression),
      ),
    ),

    _substitution_assignment: $ => choice(
      seq(
        field('left', $._expression),
        field('operator', choice('=', '<--', '<==', '-->', '==>')),
        field('right', $._expression),
      ),
      seq(
        field('left', $._variable),
        field('operator', choice(...COMPOUND_ASSIGNMENT_OPERATORS)),
        field('right', $._expression),
      ),
    ),

    increment_expression: $ => seq(field('argument', $._variable), '++'),

    decrement_expression: $ => seq(field('argument', $._variable), '--'),

    // -- [ Declarations ] --------------------------------------------------
    // ParseDeclaration

    // `signal [input|output] [{tags}] a, b[n] <== e;`
    // `input signal [{tags}] a;`
    // `signal [input|output] [{tags}] (a, b[n]) [<==|<--|= e];`
    // `[input|output] Bus[(args)] [{tags}] p, q[n];`   (circom 2.2)
    // `Bus[(args)] [input|output] [{tags}] p;`         (circom 2.2)
    signal_declaration_statement: $ => seq(
      choice(
        seq($._signal_header, choice($._signal_declarators, $._signal_tuple)),
        seq($._bus_header, $._signal_declarators),
      ),
      ';',
    ),

    // SignalHeader
    _signal_header: $ => seq(
      choice(
        seq('signal', optional(field('direction', $.signal_visibility))),
        seq(field('direction', $.signal_visibility), 'signal'),
      ),
      optional(field('tags', $.signal_tags)),
    ),

    // BusHeader
    _bus_header: $ => seq(
      choice(
        seq(field('type', $.bus_type), optional(field('direction', $.signal_visibility))),
        seq(field('direction', $.signal_visibility), field('type', $.bus_type)),
      ),
      optional(field('tags', $.signal_tags)),
    ),

    _signal_declarators: $ => choice(
      commaSep1(field('declarator', $.signal_declarator)),
      commaSep1(field('declarator', alias($._signal_declarator_unconstrained, $.signal_declarator))),
    ),

    signal_declarator: $ => seq(
      field('name', $.identifier),
      optional(field('dimensions', $.array_type)),
      optional(seq(field('operator', '<=='), field('value', $._expression))),
    ),

    _signal_tuple: $ => seq(
      '(',
      commaSep1(field('declarator', alias($._simple_declarator, $.signal_declarator))),
      ')',
      optional($._tuple_initialization),
    ),

    variable_declaration_statement: $ => seq(
      'var',
      choice(
        commaSep1(field('declarator', $.variable_declarator)),
        seq(
          '(',
          commaSep1(field('declarator', alias($._simple_declarator, $.variable_declarator))),
          ')',
          optional($._tuple_initialization),
        ),
      ),
      ';',
    ),

    variable_declarator: $ => seq(
      field('name', $.identifier),
      optional(field('dimensions', $.array_type)),
      optional(seq(field('operator', '='), field('value', $._expression))),
    ),

    component_declaration_statement: $ => seq(
      'component',
      choice(
        commaSep1(field('declarator', $.component_declarator)),
        seq(
          '(',
          commaSep1(field('declarator', alias($._simple_declarator, $.component_declarator))),
          ')',
          optional($._tuple_initialization),
        ),
      ),
      ';',
    ),

    component_declarator: $ => seq(
      field('name', $.identifier),
      optional(field('dimensions', $.array_type)),
      optional(seq(field('operator', '='), field('value', $._expression))),
    ),

    // SimpleSymbol
    _simple_declarator: $ => seq(
      field('name', $.identifier),
      optional(field('dimensions', $.array_type)),
    ),

    // TupleInitialization
    _tuple_initialization: $ => seq(
      field('operator', choice('<==', '<--', '=')),
      field('value', $._expression),
    ),

    // ParseArrayAcc*
    array_type: $ => repeat1(seq('[', $._expression, ']')),

    // -- [ Expressions ] ---------------------------------------------------
    // ParseExpression: Expression14 | ParseExpression1
    _expression: $ => choice(
      $.parallel_expression,
      $._expression1,
    ),

    // Expression14
    parallel_expression: $ => seq('parallel', field('expression', $._expression1)),

    // ParseExpression1: Expression13 | Expression12
    _expression1: $ => choice(
      $.ternary_expression,
      $._operand,
    ),

    // Expression13: not associative, the branches cannot be ternaries
    // without parentheses.
    ternary_expression: $ => seq(
      field('condition', $._operand),
      '?',
      field('consequence', $._operand),
      ':',
      field('alternative', $._operand),
    ),

    // Expression12 .. Expression2
    _operand: $ => choice(
      $.binary_expression,
      $.unary_expression,
      $._primary_expression,
    ),

    binary_expression: $ => choice(
      ...[
        ['||', PREC.OR],
        ['&&', PREC.AND],
        ['==', PREC.CMP],
        ['!=', PREC.CMP],
        ['<', PREC.CMP],
        ['>', PREC.CMP],
        ['<=', PREC.CMP],
        ['>=', PREC.CMP],
        ['|', PREC.BIT_OR],
        ['^', PREC.BIT_XOR],
        ['&', PREC.BIT_AND],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MUL],
        ['/', PREC.MUL],
        ['\\', PREC.MUL],
        ['%', PREC.MUL],
        ['**', PREC.POW],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $._operand),
          // @ts-ignore
          field('operator', operator),
          field('right', $._operand),
        )),
      ),
    ),

    // Expression2: PrefixOpTier over Expression1, so a prefix operator
    // cannot be applied twice (`- -x`) and binds tighter than `**`.
    unary_expression: $ => seq(
      field('operator', choice('!', '~', '-')),
      field('argument', $._primary_expression),
    ),

    // Expression1 | Expression0
    _primary_expression: $ => choice(
      $.call_expression,
      $.array_expression,
      $.tuple_expression,
      $.identifier,
      $.member_expression,
      $.array_access_expression,
      $.placeholder,
      $.int_literal,
      $.parenthesized_expression,
    ),

    // Function call, template instantiation, or anonymous component
    // `T(params)(inputs)`.
    call_expression: $ => seq(
      field('function', $.identifier),
      '(',
      optional(field('arguments', $.argument_list)),
      ')',
      optional(field('inputs', $.anonymous_inputs)),
    ),

    anonymous_inputs: $ => seq(
      '(',
      optional(choice(
        $.argument_list,
        commaSep1(field('input', $.named_input)),
      )),
      ')',
    ),

    // ListableWithInputNames element
    named_input: $ => seq(
      field('name', $.identifier),
      field('operator', choice('=', '<--', '<==')),
      field('value', $._expression),
    ),

    argument_list: $ => commaSep1(field('argument', $._expression)),

    array_expression: $ => seq('[', commaSep1($._expression), ']'),

    // TwoElemsListable
    tuple_expression: $ => seq(
      '(',
      $._expression,
      ',',
      commaSep1($._expression),
      ')',
    ),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    // ParseVariable: accesses only apply to a plain identifier chain, never
    // to a call or a parenthesized expression.
    _variable: $ => choice(
      $.identifier,
      $.member_expression,
      $.array_access_expression,
    ),

    member_expression: $ => seq(
      field('object', $._variable),
      '.',
      field('property', alias($.identifier, $.property_identifier)),
    ),

    array_access_expression: $ => seq(
      field('base', $._variable),
      '[',
      field('index', $._expression),
      ']',
    ),

    // The anonymous variable `_`.
    placeholder: _ => '_',

    // DECNUMBER | HEXNUMBER
    int_literal: _ => token(choice(
      /0x[0-9A-Fa-f]+/,
      /[0-9]+/,
    )),

    identifier: _ => /[$_]*[a-zA-Z][a-zA-Z$_0-9]*/,
